Fix buttons gap.

--- a/sass/plugins/cookieYes/_cookieYes.scss
+++ b/sass/plugins/cookieYes/_cookieYes.scss
@@ -53,3 +53,7 @@ button.cky-btn.cky-btn-accept {
     font-size: 16px !important;
     line-height: 160% !important;
 }
+
+.cky-notice-btn-wrapper {
+    gap: 16px;
+}
